backend/smtp_check_error_2.txt
cargo :      Locking 9 
packages to latest 
compatible versions
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -FilePath 
smtp_check_error_2.txt 
-Encodin ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (   
      Locking 9 ...atib   
 le versions:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
      Adding aws-lc-rs 
v1.16.2
      Adding aws-lc-sys 
v0.39.1
      Adding cmake v0.1.58
      Adding dunce v1.0.5
      Adding fs_extra 
v1.3.0
      Adding getrandom 
v0.3.4
      Adding jobserver 
v0.1.34
      Adding r-efi v5.3.0
      Adding webpki-roots 
v1.0.6
   Compiling getrandom 
v0.3.4
   Compiling cfg-if v1.0.4
   Compiling fs_extra 
v1.3.0
   Compiling dunce v1.0.5
   Compiling aws-lc-rs 
v1.16.2
   Compiling rustls 
v0.23.37
    Checking hyper-util 
v0.1.20
    Checking webpki-roots 
v1.0.6
   Compiling jobserver 
v0.1.34
   Compiling cc v1.2.57
    Checking 
vercel_runtime v2.1.1
   Compiling cmake v0.1.58
   Compiling ring v0.17.14
   Compiling aws-lc-sys 
v0.39.1
   Compiling rustls 
v0.21.12
    Checking sct v0.7.1
    Checking 
rustls-webpki v0.101.7
    Checking jsonwebtoken 
v9.3.1
    Checking tokio-rustls 
v0.24.1
    Checking hyper-rustls 
v0.24.2
    Checking reqwest 
v0.11.27
    Checking async-stripe 
v0.41.0
    Checking oauth2 v4.4.2
    Checking 
rustls-webpki v0.103.10
    Checking tokio-rustls 
v0.26.4
    Checking lettre 
v0.11.21
    Checking 
backend_v2_pkg v0.1.0 (C:\
Users\shama\Documents\Quic
k\Protection-Valley\backen
d)
error[E0599]: no method 
named `html_body` found 
for struct 
`MessageBuilder` in the 
current scope
   --> backend\src\service
s\email_service.rs:126:29
    |
126 |         let email = 
builder.html_body(html_con
tent)?;
    |                     
        ^^^^^^^^^ method 
not found in 
`MessageBuilder`

For more information 
about this error, try 
`rustc --explain E0599`.
error: could not compile 
`backend_v2_pkg` (lib) 
due to 1 previous error
